--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcryptjs": "^3.0.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.15.0",
     "mongoose": "^8.19.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.1.0"
   },
   "devDependencies": {
